--- a/templates/cluster-template.yaml
+++ b/templates/cluster-template.yaml
@@ -51,14 +51,14 @@ spec:
   org: ${VCD_ORGANIZATION} # VCD organization name where the cluster should be deployed
   ovdc: ${VCD_ORGANIZATION_VDC} # VCD virtual datacenter name where the cluster should be deployed
   ovdcNetwork: ${VCD_ORGANIZATION_VDC_NETWORK} # VCD virtual datacenter network to be used by the cluster
-  useAsManagementCluster: ${USE_AS_MANAGEMENT_CLUSTER} # intent to use the resultant CAPVCD cluster as a management cluster
+  useAsManagementCluster: false # intent to use the resultant CAPVCD cluster as a management cluster
   userContext:
     secretRef:
       name: capi-user-credentials # name of the secret containing the credentials of the VCD persona creating the cluster
       namespace: ${TARGET_NAMESPACE} # name of the secret containing the credentials of the VCD persona creating the cluster
   rdeId: ${VCD_RDE_ID} # rdeId if it is already created. If empty, CAPVCD will create one for the cluster.
   loadBalancerConfigSpec:
-    vipSubnet: ${IP_SUBNET} # Virtual IP CIDR for the external network
+    vipSubnet: ${VCD_VIP_CIDR} # Virtual IP CIDR for the external network
   proxyConfigSpec:
     httpProxy: ${HTTP_PROXY}
     httpsProxy: ${HTTPS_PROXY}
