--- a/templates/cluster-template-v1.20.8.yaml
+++ b/templates/cluster-template-v1.20.8.yaml
@@ -2,14 +2,6 @@ apiVersion: cluster.x-k8s.io/v1beta1
 kind: Cluster
 metadata:
   name: ${CLUSTER_NAME}
-  namespace: ${TARGET_NAMESPACE}
-  labels:
-    cluster-role.tkg.tanzu.vmware.com/management: ""
-    tanzuKubernetesRelease: ${TKR_VERSION}
-    tkg.tanzu.vmware.com/cluster-name: ${CLUSTER_NAME}
-  annotations:
-    osInfo: ubuntu,20.04,amd64
-    TKGVERSION: ${TKG_VERSION}
 spec:
   clusterNetwork:
     pods:
@@ -56,13 +48,8 @@ spec:
     secretRef:
       name: capi-user-credentials # name of the secret containing the credentials of the VCD persona creating the cluster
       namespace: ${TARGET_NAMESPACE} # name of the secret containing the credentials of the VCD persona creating the cluster
-  rdeId: ${VCD_RDE_ID} # rdeId if it is already created. If empty, CAPVCD will create one for the cluster.
   loadBalancerConfigSpec:
     vipSubnet: ${VCD_VIP_CIDR} # Virtual IP CIDR for the external network
-  proxyConfigSpec:
-    httpProxy: ${HTTP_PROXY}
-    httpsProxy: ${HTTPS_PROXY}
-    noProxy: ${NO_PROXY}
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: VCDMachineTemplate
@@ -77,8 +64,8 @@ spec:
       sizingPolicy: ${VCD_CONTROL_PLANE_SIZING_POLICY} # Sizing policy to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       placementPolicy: ${VCD_CONTROL_PLANE_PLACEMENT_POLICY} # Placement policy to be used for worker VMs (this must be pre-published on the chosen organization virtual datacenter)
       storageProfile: "${VCD_CONTROL_PLANE_STORAGE_PROFILE}" # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
-      # enableNvidiaGpu: ${ENABLE_NVIDIA_GPU} # No GPU config on control plane
       diskSize: ${DISK_SIZE}
+      enableNvidiaGPU: false
 ---
 apiVersion: controlplane.cluster.x-k8s.io/v1beta1
 kind: KubeadmControlPlane
@@ -131,7 +118,7 @@ spec:
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: VCDMachineTemplate
 metadata:
-  name: ${CLUSTER_NAME}-${WORKER_POOL_NAME}
+  name: ${CLUSTER_NAME}-md-0
   namespace: ${TARGET_NAMESPACE}
 spec:
   template:
@@ -141,13 +128,13 @@ spec:
       sizingPolicy: ${VCD_WORKER_SIZING_POLICY} # Sizing policy to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       placementPolicy: ${VCD_WORKER_PLACEMENT_POLICY} # Placement policy to be used for worker VMs (this must be pre-published on the chosen organization virtual datacenter)
       storageProfile: "${VCD_WORKER_STORAGE_PROFILE}" # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
-      enableNvidiaGpu: ${ENABLE_NVIDIA_GPU}
       diskSize: ${DISK_SIZE}
+      enableNvidiaGPU: false
 ---
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfigTemplate
 metadata:
-  name: ${CLUSTER_NAME}-${WORKER_POOL_NAME}
+  name: ${CLUSTER_NAME}-md-0
   namespace: ${TARGET_NAMESPACE}
 spec:
   template:
@@ -166,7 +153,7 @@ spec:
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: MachineDeployment
 metadata:
-  name: ${CLUSTER_NAME}-${WORKER_POOL_NAME}
+  name: ${CLUSTER_NAME}-md-0
   namespace: ${TARGET_NAMESPACE}
 spec:
   clusterName: ${CLUSTER_NAME} # name of the Cluster object
@@ -179,12 +166,12 @@ spec:
         configRef:
           apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
           kind: KubeadmConfigTemplate
-          name: ${CLUSTER_NAME}-${WORKER_POOL_NAME} # name of the KubeadmConfigTemplate object
+          name: ${CLUSTER_NAME}-md-0 # name of the KubeadmConfigTemplate object
           namespace: ${TARGET_NAMESPACE} # kubernetes namespace of the KubeadmConfigTemplate object. Should be the same namespace as that of the Cluster object
       clusterName: ${CLUSTER_NAME} # name of the Cluster object
       infrastructureRef:
         apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
         kind: VCDMachineTemplate
-        name: ${CLUSTER_NAME}-${WORKER_POOL_NAME} # name of the VCDMachineTemplate object used to deploy worker nodes
+        name: ${CLUSTER_NAME}-md-0 # name of the VCDMachineTemplate object used to deploy worker nodes
         namespace: ${TARGET_NAMESPACE} # kubernetes namespace of the VCDMachineTemplate object used to deploy worker nodes
       version: v1.20.8+vmware.1 # Kubernetes version to be used to create (or) upgrade the worker nodes. The value needs to be retrieved from the respective TKGm ova BOM. Refer to the documentation.
