--- a/templates/cluster-template-v1.22.9-crs.yaml
+++ b/templates/cluster-template-v1.22.9-crs.yaml
@@ -53,7 +53,7 @@ spec:
       name: capi-user-credentials
       namespace: ${TARGET_NAMESPACE}
   loadBalancerConfigSpec:
-    vipSubnet: ${VCD_VIP_CIDR} # Virtual IP CIDR for the external network
+    vipSubnet: "" # Virtual IP CIDR for the external network
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: VCDMachineTemplate
