--- a/templates/cluster-template.yaml
+++ b/templates/cluster-template.yaml
@@ -4,18 +4,15 @@ metadata:
   name: ${CLUSTER_NAME}
   namespace: ${TARGET_NAMESPACE}
   labels:
-    cluster-role.tkg.tanzu.vmware.com/management: ""
-    tanzuKubernetesRelease: ${TKR_VERSION}
-    tkg.tanzu.vmware.com/cluster-name: ${CLUSTER_NAME}
-  annotations:
-    osInfo: ubuntu,20.04,amd64
-    TKGVERSION: ${TKG_VERSION}
+    cni: antrea
+    ccm: external
+    csi: external
 spec:
   clusterNetwork:
     pods:
       cidrBlocks:
         - ${POD_CIDR} # pod CIDR for the cluster
-    serviceDomain: k8s.test
+    serviceDomain: cluster.local
     services:
       cidrBlocks:
         - ${SERVICE_CIDR} # service CIDR for the cluster
