--- a/templates/cluster-template-v1.22.9-crs.yaml
+++ b/templates/cluster-template-v1.22.9-crs.yaml
@@ -2,6 +2,7 @@ apiVersion: cluster.x-k8s.io/v1beta1
 kind: Cluster
 metadata:
   name: ${CLUSTER_NAME}
+  namespace: ${TARGET_NAMESPACE}
   labels:
     cni: antrea
     ccm: external
@@ -11,7 +12,7 @@ spec:
     pods:
       cidrBlocks:
         - ${POD_CIDR} # pod CIDR for the cluster
-    serviceDomain: k8s.test
+    serviceDomain: cluster.local
     services:
       cidrBlocks:
         - ${SERVICE_CIDR} # service CIDR for the clusterrdeId
