--- a/templates/cluster-template.yaml
+++ b/templates/cluster-template.yaml
@@ -4,18 +4,15 @@ metadata:
   name: ${CLUSTER_NAME}
   namespace: ${TARGET_NAMESPACE}
   labels:
-    cluster-role.tkg.tanzu.vmware.com/management: ""
-    tanzuKubernetesRelease: ${TKR_VERSION}
-    tkg.tanzu.vmware.com/cluster-name: ${CLUSTER_NAME}
-  annotations:
-    osInfo: ubuntu,20.04,amd64
-    TKGVERSION: ${TKG_VERSION}
+    cni: antrea
+    ccm: external
+    csi: external
 spec:
   clusterNetwork:
     pods:
       cidrBlocks:
         - ${POD_CIDR} # pod CIDR for the cluster
-    serviceDomain: k8s.test
+    serviceDomain: cluster.local
     services:
       cidrBlocks:
         - ${SERVICE_CIDR} # service CIDR for the cluster
@@ -51,16 +48,14 @@ spec:
   org: ${VCD_ORGANIZATION} # VCD organization name where the cluster should be deployed
   ovdc: ${VCD_ORGANIZATION_VDC} # VCD virtual datacenter name where the cluster should be deployed
   ovdcNetwork: ${VCD_ORGANIZATION_VDC_NETWORK} # VCD virtual datacenter network to be used by the cluster
-  parentUid: ${PARENT_RDE_ID} # create the CAPVCD cluster from a specific management cluster associated with this UID.
-  useAsManagementCluster: ${USE_AS_MANAGEMENT_CLUSTER} # intent to use the resultant CAPVCD cluster as a management cluster
+  useAsManagementCluster: false # intent to use the resultant CAPVCD cluster as a management cluster
   userContext:
     secretRef:
       name: capi-user-credentials # name of the secret containing the credentials of the VCD persona creating the cluster
       namespace: ${TARGET_NAMESPACE} # name of the secret containing the credentials of the VCD persona creating the cluster
   rdeId: ${VCD_RDE_ID} # rdeId if it is already created. If empty, CAPVCD will create one for the cluster.
   loadBalancerConfigSpec:
-    vipSubnet: ${IP_SUBNET} # Virtual IP CIDR for the external network
-    useOneArm: ${ENABLE_ONEARM} # Set uneOneArm to true only inetent to upgrade CAPVCD from 0.5.x to 1.0.0
+    vipSubnet: ${VCD_VIP_CIDR} # Virtual IP CIDR for the external network
   proxyConfigSpec:
     httpProxy: ${HTTP_PROXY}
     httpsProxy: ${HTTPS_PROXY}
@@ -78,9 +73,9 @@ spec:
       template: ${VCD_TEMPLATE_NAME} # Name of the template to be used to create (or) upgrade the control plane nodes
       sizingPolicy: ${VCD_CONTROL_PLANE_SIZING_POLICY} # Sizing policy to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       placementPolicy: ${VCD_CONTROL_PLANE_PLACEMENT_POLICY} # Placement policy to be used for worker VMs (this must be pre-published on the chosen organization virtual datacenter)
-      storageProfile: ${VCD_CONTROL_PLANE_STORAGE_PROFILE} # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
-      # enableNvidiaGpu: ${ENABLE_NVIDIA_GPU} # No GPU config on control plane
+      storageProfile: "${VCD_CONTROL_PLANE_STORAGE_PROFILE}" # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       diskSize: ${DISK_SIZE}
+      enableNvidiaGPU: false
 ---
 apiVersion: controlplane.cluster.x-k8s.io/v1beta1
 kind: KubeadmControlPlane
@@ -108,7 +103,7 @@ spec:
     users:
       - name: root
         sshAuthorizedKeys:
-          - ${SSH_PUBLIC_KEY} # ssh public key to log in to the control plane VMs in VCD
+          - "${SSH_PUBLIC_KEY}" # ssh public key to log in to the control plane VMs in VCD
     initConfiguration:
       nodeRegistration:
         criSocket: /run/containerd/containerd.sock
@@ -142,9 +137,9 @@ spec:
       template: ${VCD_TEMPLATE_NAME} # Name of the template to be used to create (or) upgrade the worker nodes
       sizingPolicy: ${VCD_WORKER_SIZING_POLICY} # Sizing policy to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       placementPolicy: ${VCD_WORKER_PLACEMENT_POLICY} # Placement policy to be used for worker VMs (this must be pre-published on the chosen organization virtual datacenter)
-      storageProfile: ${VCD_WORKER_STORAGE_PROFILE} # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
-      enableNvidiaGpu: ${ENABLE_NVIDIA_GPU}
+      storageProfile: "${VCD_WORKER_STORAGE_PROFILE}" # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       diskSize: ${DISK_SIZE}
+      enableNvidiaGPU: false
 ---
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfigTemplate
@@ -157,7 +152,7 @@ spec:
       users:
         - name: root
           sshAuthorizedKeys:
-            - ${SSH_PUBLIC_KEY} # ssh public key to log in to the worker VMs in VCD
+            - "${SSH_PUBLIC_KEY}" # ssh public key to log in to the worker VMs in VCD
       joinConfiguration:
         nodeRegistration:
           criSocket: /run/containerd/containerd.sock
