Update to the correct CPI CRS file content from CPI repo
Signed-off-by: lzichong <lzichong@vmware.com>

--- a/templates/crs/cpi/cloud-director-ccm.yaml
+++ b/templates/crs/cpi/cloud-director-ccm.yaml
@@ -166,6 +166,12 @@ spec:
               mountPath: /etc/kubernetes/vcloud
             - name: vcloud-ccm-vcloud-basic-auth-volume
               mountPath: /etc/kubernetes/vcloud/basic-auth
+          env:
+            - name: CLUSTER_ID
+              valueFrom:
+                secretKeyRef:
+                  name: vcloud-clusterid-secret
+                  key: clusterid
       tolerations:
         - key: node.cloudprovider.kubernetes.io/uninitialized
           value: "true"
