--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 - bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
 - bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
 - bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
+- bases/infrastructure.cluster.x-k8s.io_vcdclustertemplates.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -22,6 +23,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_vcdmachines.yaml
 #- patches/webhook_in_vcdclusters.yaml
 #- patches/webhook_in_vcdmachinetemplates.yaml
+#- patches/webhook_in_vcdclustertemplates.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -32,6 +34,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_vcdmachines.yaml
 #- patches/cainjection_in_vcdclusters.yaml
 #- patches/cainjection_in_vcdmachinetemplates.yaml
+#- patches/cainjection_in_vcdclustertemplates.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
