--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -1163,7 +1163,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:main-branch.6409b2b
+        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:main-branch-yanmo
         livenessProbe:
           httpGet:
             path: /healthz
