Address Aritra CR: Remove -airgap suffix, remove duplicate metadata-airgap file
Signed-off-by: lzichong <lzichong@vmware.com>

--- a/artifacts/Dockerfile
+++ b/artifacts/Dockerfile
@@ -1,4 +1,4 @@
 FROM scratch
-COPY /artifacts/infrastructure-components-airgap.yaml.template \
-    /artifacts/metadata-airgap.yaml /src/artifact/
+COPY /artifacts/infrastructure-components.yaml.template \
+    ./metadata.yaml /src/artifact/
 ENTRYPOINT ["/bin/sh"]
