Remove __REGISTRY__ as it's no longer needed, add latest infrastructure-components.yaml each time
Signed-off-by: lzichong <lzichong@vmware.com>

--- a/artifacts/Dockerfile
+++ b/artifacts/Dockerfile
@@ -1,4 +1,4 @@
 FROM scratch
-COPY /artifacts/infrastructure-components.yaml.template \
+COPY ./templates/infrastructure-components.yaml \
     ./metadata.yaml /src/artifact/
 ENTRYPOINT ["/bin/sh"]
