--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
@@ -124,13 +124,6 @@ spec:
                           with the relevant binaries installed If true, then an appropriate
                           placement policy should be set
                         type: boolean
-                      extraOvdcNetworks:
-                        description: ExtraOvdcNetworks is the list of extra Ovdc Networks
-                          that are mounted to machines. VCDClusterSpec.OvdcNetwork
-                          is always attached regardless of this field.
-                        items:
-                          type: string
-                        type: array
                       placementPolicy:
                         description: PlacementPolicy is the placement policy to be
                           used on this machine.
@@ -151,13 +144,6 @@ spec:
                       template:
                         description: TemplatePath is the path of the template OVA
                           that is to be used
-                        type: string
-                      vmNamingTemplate:
-                        description: VmNamingTemplate is go template to generate VM
-                          names based on Machine and VCDMachine CRs. Functions of
-                          Sprig library are supported. See https://github.com/Masterminds/sprig
-                          Immutable field. machine.Name is used as VM name when this
-                          field is empty.
                         type: string
                     type: object
                 required:
@@ -197,6 +183,27 @@ spec:
             properties:
               template:
                 properties:
+                  metadata:
+                    description: 'Standard object''s metadata. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata'
+                    properties:
+                      annotations:
+                        additionalProperties:
+                          type: string
+                        description: 'Annotations is an unstructured key value map
+                          stored with a resource that may be set by external tools
+                          to store and retrieve arbitrary metadata. They are not queryable
+                          and should be preserved when modifying objects. More info:
+                          http://kubernetes.io/docs/user-guide/annotations'
+                        type: object
+                      labels:
+                        additionalProperties:
+                          type: string
+                        description: 'Map of string keys and values that can be used
+                          to organize and categorize (scope and select) objects. May
+                          match selectors of replication controllers and services.
+                          More info: http://kubernetes.io/docs/user-guide/labels'
+                        type: object
+                    type: object
                   spec:
                     description: Spec is the specification of the desired behavior
                       of the machine.
