remove ExtraOvdcNetworks & VmNamingTemplate fields from v1beta1.VCDMachineSpec and update conversions

--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -661,11 +661,6 @@ spec:
               enableNvidiaGPU:
                 description: EnableNvidiaGPU is true when a VM should be created with the relevant binaries installed If true, then an appropriate placement policy should be set
                 type: boolean
-              extraOvdcNetworks:
-                description: ExtraOvdcNetworks is the list of extra Ovdc Networks that are mounted to machines. VCDClusterSpec.OvdcNetwork is always attached regardless of this field.
-                items:
-                  type: string
-                type: array
               placementPolicy:
                 description: PlacementPolicy is the placement policy to be used on this machine.
                 type: string
@@ -1028,11 +1023,6 @@ spec:
                       enableNvidiaGPU:
                         description: EnableNvidiaGPU is true when a VM should be created with the relevant binaries installed If true, then an appropriate placement policy should be set
                         type: boolean
-                      extraOvdcNetworks:
-                        description: ExtraOvdcNetworks is the list of extra Ovdc Networks that are mounted to machines. VCDClusterSpec.OvdcNetwork is always attached regardless of this field.
-                        items:
-                          type: string
-                        type: array
                       placementPolicy:
                         description: PlacementPolicy is the placement policy to be used on this machine.
                         type: string
@@ -1084,6 +1074,20 @@ spec:
             properties:
               template:
                 properties:
+                  metadata:
+                    description: 'Standard object''s metadata. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata'
+                    properties:
+                      annotations:
+                        additionalProperties:
+                          type: string
+                        description: 'Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations'
+                        type: object
+                      labels:
+                        additionalProperties:
+                          type: string
+                        description: 'Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels'
+                        type: object
+                    type: object
                   spec:
                     description: Spec is the specification of the desired behavior of the machine.
                     properties:
