--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -14,7 +14,7 @@ metadata:
   labels:
     cluster.x-k8s.io/provider: infrastructure-vcd
     cluster.x-k8s.io/v1alpha4: v1alpha4
-    cluster.x-k8s.io/v1beta1: v1beta1
+    cluster.x-k8s.io/v1beta1: v1beta2
     clusterctl.cluster.x-k8s.io: ""
     clusterctl.cluster.x-k8s.io/move: ""
   name: vcdclusters.infrastructure.cluster.x-k8s.io
@@ -317,7 +317,7 @@ spec:
         - spec
         type: object
     served: true
-    storage: true
+    storage: false
     subresources:
       status: {}
   - name: v1beta2
@@ -517,7 +517,7 @@ metadata:
   labels:
     cluster.x-k8s.io/provider: infrastructure-vcd
     cluster.x-k8s.io/v1alpha4: v1alpha4
-    cluster.x-k8s.io/v1beta1: v1beta1
+    cluster.x-k8s.io/v1beta1: v1beta2
     clusterctl.cluster.x-k8s.io: ""
     clusterctl.cluster.x-k8s.io/move: ""
   name: vcdmachines.infrastructure.cluster.x-k8s.io
@@ -681,6 +681,9 @@ spec:
               template:
                 description: TemplatePath is the path of the template OVA that is to be used
                 type: string
+              vmNamingTemplate:
+                description: VmNamingTemplate is go template to generate VM names based on Machine and VCDMachine CRs. Functions of Sprig library are supported. See https://github.com/Masterminds/sprig Immutable field. machine.Name is used as VM name when this field is empty.
+                type: string
             type: object
           status:
             description: VCDMachineStatus defines the observed state of VCDMachine
@@ -759,7 +762,7 @@ spec:
             type: object
         type: object
     served: true
-    storage: true
+    storage: false
     subresources:
       status: {}
   - name: v1beta2
@@ -813,6 +816,9 @@ spec:
                 type: string
               template:
                 description: TemplatePath is the path of the template OVA that is to be used
+                type: string
+              vmNamingTemplate:
+                description: VmNamingTemplate is go template to generate VM names based on Machine and VCDMachine CRs. Functions of Sprig library are supported. See https://github.com/Masterminds/sprig Immutable field. machine.Name is used as VM name when this field is empty.
                 type: string
             type: object
           status:
@@ -911,7 +917,7 @@ metadata:
   labels:
     cluster.x-k8s.io/provider: infrastructure-vcd
     cluster.x-k8s.io/v1alpha4: v1alpha4
-    cluster.x-k8s.io/v1beta1: v1beta1
+    cluster.x-k8s.io/v1beta1: v1beta2
     clusterctl.cluster.x-k8s.io: ""
     clusterctl.cluster.x-k8s.io/move: ""
   name: vcdmachinetemplates.infrastructure.cluster.x-k8s.io
@@ -1042,6 +1048,9 @@ spec:
                       template:
                         description: TemplatePath is the path of the template OVA that is to be used
                         type: string
+                      vmNamingTemplate:
+                        description: VmNamingTemplate is go template to generate VM names based on Machine and VCDMachine CRs. Functions of Sprig library are supported. See https://github.com/Masterminds/sprig Immutable field. machine.Name is used as VM name when this field is empty.
+                        type: string
                     type: object
                 required:
                 - spec
@@ -1054,7 +1063,7 @@ spec:
             type: object
         type: object
     served: true
-    storage: true
+    storage: false
     subresources:
       status: {}
   - name: v1beta2
@@ -1113,6 +1122,9 @@ spec:
                         type: string
                       template:
                         description: TemplatePath is the path of the template OVA that is to be used
+                        type: string
+                      vmNamingTemplate:
+                        description: VmNamingTemplate is go template to generate VM names based on Machine and VCDMachine CRs. Functions of Sprig library are supported. See https://github.com/Masterminds/sprig Immutable field. machine.Name is used as VM name when this field is empty.
                         type: string
                     type: object
                 required:
@@ -1496,15 +1508,35 @@ metadata:
 webhooks:
 - admissionReviewVersions:
   - v1
-  - v1beta1
+  - v1beta2
   clientConfig:
     service:
       name: capvcd-webhook-service
       namespace: capvcd-system
-      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-vcdcluster
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta2-vcdcluster
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.vcdcluster.infrastructure.cluster.x-k8s.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1beta2
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - vcdclusters
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: capvcd-webhook-service
+      namespace: capvcd-system
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-vcdmachine
+  failurePolicy: Fail
+  name: mutation.vcdmachine.infrastructure.cluster.x-k8s.io
   rules:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
@@ -1514,7 +1546,7 @@ webhooks:
     - CREATE
     - UPDATE
     resources:
-    - vcdclusters
+    - vcdmachines
   sideEffects: None
 ---
 apiVersion: admissionregistration.k8s.io/v1
@@ -1528,15 +1560,36 @@ metadata:
 webhooks:
 - admissionReviewVersions:
   - v1
-  - v1beta1
+  - v1beta2
   clientConfig:
     service:
       name: capvcd-webhook-service
       namespace: capvcd-system
-      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-vcdcluster
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta2-vcdcluster
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.vcdcluster.infrastructure.cluster.x-k8s.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1beta2
+    operations:
+    - CREATE
+    - UPDATE
+    - DELETE
+    resources:
+    - vcdclusters
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: capvcd-webhook-service
+      namespace: capvcd-system
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-vcdmachine
+  failurePolicy: Fail
+  name: validation.vcdmachine.infrastructure.cluster.x-k8s.io
   rules:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
@@ -1545,7 +1598,6 @@ webhooks:
     operations:
     - CREATE
     - UPDATE
-    - DELETE
     resources:
-    - vcdclusters
+    - vcdmachines
   sideEffects: None
