change name of the webhooks
Signed-off-by: Aniruddha Shamasundar <aniruddha.9794@gmail.com>

--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -14,7 +14,7 @@ webhooks:
       namespace: system
       path: /mutate-infrastructure-cluster-x-k8s-io-v1beta2-vcdcluster
   failurePolicy: Fail
-  name: mvcdcluster.kb.io
+  name: mutation.vcdcluster.infrastructure.cluster.x-k8s.io
   rules:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
@@ -34,7 +34,7 @@ webhooks:
       namespace: system
       path: /mutate-infrastructure-cluster-x-k8s-io-v1beta2-vcdmachine
   failurePolicy: Fail
-  name: mvcdmachine.kb.io
+  name: mutation.vcdmachine.infrastructure.cluster.x-k8s.io
   rules:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
@@ -62,7 +62,7 @@ webhooks:
       namespace: system
       path: /validate-infrastructure-cluster-x-k8s-io-v1beta2-vcdcluster
   failurePolicy: Fail
-  name: vvcdcluster.kb.io
+  name: validation.vcdcluster.infrastructure.cluster.x-k8s.io
   rules:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
@@ -82,7 +82,7 @@ webhooks:
       namespace: system
       path: /validate-infrastructure-cluster-x-k8s-io-v1beta2-vcdmachine
   failurePolicy: Fail
-  name: vvcdmachine.kb.io
+  name: validation.vcdmachine.infrastructure.cluster.x-k8s.io
   rules:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
