--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -1508,15 +1508,13 @@ metadata:
 webhooks:
 - admissionReviewVersions:
   - v1
-  - v1beta2
   clientConfig:
     service:
       name: capvcd-webhook-service
       namespace: capvcd-system
       path: /mutate-infrastructure-cluster-x-k8s-io-v1beta2-vcdcluster
   failurePolicy: Fail
-  matchPolicy: Equivalent
-  name: default.vcdcluster.infrastructure.cluster.x-k8s.io
+  name: mutation.vcdcluster.infrastructure.cluster.x-k8s.io
   rules:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
@@ -1534,14 +1532,14 @@ webhooks:
     service:
       name: capvcd-webhook-service
       namespace: capvcd-system
-      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta1-vcdmachine
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1beta2-vcdmachine
   failurePolicy: Fail
   name: mutation.vcdmachine.infrastructure.cluster.x-k8s.io
   rules:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1beta1
+    - v1beta2
     operations:
     - CREATE
     - UPDATE
@@ -1560,14 +1558,12 @@ metadata:
 webhooks:
 - admissionReviewVersions:
   - v1
-  - v1beta2
   clientConfig:
     service:
       name: capvcd-webhook-service
       namespace: capvcd-system
       path: /validate-infrastructure-cluster-x-k8s-io-v1beta2-vcdcluster
   failurePolicy: Fail
-  matchPolicy: Equivalent
   name: validation.vcdcluster.infrastructure.cluster.x-k8s.io
   rules:
   - apiGroups:
@@ -1577,7 +1573,6 @@ webhooks:
     operations:
     - CREATE
     - UPDATE
-    - DELETE
     resources:
     - vcdclusters
   sideEffects: None
@@ -1587,14 +1582,14 @@ webhooks:
     service:
       name: capvcd-webhook-service
       namespace: capvcd-system
-      path: /validate-infrastructure-cluster-x-k8s-io-v1beta1-vcdmachine
+      path: /validate-infrastructure-cluster-x-k8s-io-v1beta2-vcdmachine
   failurePolicy: Fail
   name: validation.vcdmachine.infrastructure.cluster.x-k8s.io
   rules:
   - apiGroups:
     - infrastructure.cluster.x-k8s.io
     apiVersions:
-    - v1beta1
+    - v1beta2
     operations:
     - CREATE
     - UPDATE
