Add bom.json and dependencies.txt to capvcd-manifest-airgapped image
Signed-off-by: Aritra Sen <sena@sena0MD6R.vmware.com>

--- a/artifacts/Dockerfile
+++ b/artifacts/Dockerfile
@@ -1,4 +1,6 @@
 FROM scratch
 COPY ./templates/infrastructure-components.yaml \
-    ./metadata.yaml /src/artifact/
+    ./metadata.yaml \
+    ./artifacts/bom.json \
+    ./artifacts/dependencies.txt /src/artifact/
 ENTRYPOINT ["/bin/sh"]
