KUBE_VIP: add support for kube-vip instead of NSX-T ALB
Add more params

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclustertemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclustertemplates.yaml
@@ -58,6 +58,12 @@ spec:
                         - host
                         - port
                         type: object
+                      kubeVIPParams:
+                        properties:
+                          internalIPAddress:
+                            default: ""
+                            type: string
+                        type: object
                       loadBalancerConfigSpec:
                         description: LoadBalancerConfig defines load-balancer configuration
                           for the Cluster both for the control plane nodes and for
@@ -94,6 +100,9 @@ spec:
                       site:
                         type: string
                       useAsManagementCluster:
+                        default: false
+                        type: boolean
+                      useKubeVIP:
                         default: false
                         type: boolean
                       userContext:
