--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -383,6 +383,12 @@ spec:
                 - host
                 - port
                 type: object
+              kubeVIPParams:
+                properties:
+                  internalIPAddress:
+                    default: ""
+                    type: string
+                type: object
               loadBalancerConfigSpec:
                 description: LoadBalancerConfig defines load-balancer configuration
                   for the Cluster both for the control plane nodes and for the CPI
@@ -418,6 +424,9 @@ spec:
               site:
                 type: string
               useAsManagementCluster:
+                default: false
+                type: boolean
+              useKubeVIP:
                 default: false
                 type: boolean
               userContext:
