[CAFV-255] Implement phase1 fallback mechanism - update org and Ovdc inside vcdcluster.status in k8s (#442)
* add ovdc name change handling inside CAPVCD

Signed-off-by: ymo24 <ymo@vmware.com>

* address Sahithi's comments

Signed-off-by: ymo24 <ymo@vmware.com>

* minor fix

Signed-off-by: ymo24 <ymo@vmware.com>

* update resource only when ovdcName change

Signed-off-by: ymo24 <ymo@vmware.com>

* test ovdc name change

Signed-off-by: ymo24 <ymo@vmware.com>

* add conversion for v1alpha4

Signed-off-by: ymo24 <ymo@vmware.com>

* address Sahithi's comments

Signed-off-by: ymo24 <ymo@vmware.com>

* minor fix

Signed-off-by: ymo24 <ymo@vmware.com>

---------

Signed-off-by: ymo24 <ymo@vmware.com>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -551,6 +551,28 @@ spec:
                 description: MetadataUpdated denotes that the metadata of Vapp is
                   updated.
                 type: boolean
+              vcdResourceMap:
+                description: optional
+                properties:
+                  ovdcs:
+                    description: VCDResources stores the latest ID and name of VCD
+                      resources for specific resource types.
+                    items:
+                      description: VCDResource restores the data structure for some
+                        VCD Resources
+                      properties:
+                        id:
+                          type: string
+                        name:
+                          type: string
+                        type:
+                          type: string
+                      required:
+                      - id
+                      - name
+                      type: object
+                    type: array
+                type: object
             required:
             - rdeVersionInUse
             - ready
